# predictionterminal

./: .dockerignore  .env.example  .gitignore  .mutmut.cfg  .pre-commit-config.yaml  AUDITORIA_DEEP_TESTING.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  INSTRUCCIONES.md  LICENSE  Procfile  README.md  README.md.bak-W11-51  docker-compose.prod.yml  docker-compose.yml  fly.toml  render.yaml
api/: .dockerignore  CHANGELOG.md  Dockerfile  factor_validation_report.json  pyproject.toml  requirements.txt
api/scripts/: README.md  aggregate_alpha_history.py  audit_arb_matches.py  audit_dead_factors.py  audit_dead_factors.report.json  backfill_ah_sweeps.py  backup.sh  btc_arb_backtest.py  btc_arb_collect.py  btc_arb_live.py  btc_multi_cex_monitor.py  btc_updown_monitor.py  btc_updown_ws_monitor.py  build_factor_tags.py  chainlink_lag.py  compute_live_signals.py  coord_cleanup.py  coverage_report.py  deploy.sh  detect_dead_slugs.py  discovery_daemon.py  eval_binary_pricing.py  factor_cluster_report.py  factor_coverage_stats.py  factors_audit_full.py  gen_api_reference.py  generate_backtest_comparison.py  generate_factor_heatmap.py  monitor.sh  nightly_dead_slug_sweep.py  poly_book_depth.py  probe_polymarket.py  regenerate_alpha_tiers.py  restore.sh  rollback.sh  run_alpha_hunter.py  run_mutation_tests.py  sanitize_alpha_strategies.py  stress_test.py  validate_active_edits.py  (+7 more)
api/src/pfm/: __init__.py  advanced.py  advanced_event_models.py  advanced_event_models_router.py  advanced_strategies.py  alpha_graveyard.py  alpha_graveyard_router.py  alpha_hub_router.py  alpha_hunter.py  alpha_lab.py  alpha_tier_regen.py  analyses.py  arb_scanner.py  attribution.py  auto_hedge.py  basket.py  btc_arb.py  cache.py  cache_pool.py  cache_utils.py  chart_export.py  cointegration.py  config.py  counterfactual.py  crypto_events_engine.py  decay_monitor.py  dependencies.py  dfa.py  distance_method.py  earnings_whisper.py  embed.py  equity_factors.py  event_model.py  event_on_event.py  event_on_event_router.py  factor_model_pro.py  factor_resolver.py  factors.py  factors.yml  factors_correlation_matrix_router.py  (+120 more)
api/src/pfm/admin/: __init__.py  cache_invalidate_router.py  cache_stats_router.py
api/src/pfm/alerts/: __init__.py  channels.py  configure_router.py  digest_router.py  engine.py  router.py  schemas.py  storage.py
api/src/pfm/alpha_hub/: __init__.py  sentiment_alert.py
api/src/pfm/arb/: __init__.py  confirmed_store.py  discovery_matcher.py  discovery_pipeline.py  live_pricing.py  market_crawler.py  quality_router.py
api/src/pfm/arb_matching/: __init__.py  date_extractor.py  event_similarity.py
api/src/pfm/archive/: __init__.py  cross_venue_archive.py  kalshi_archive.py  kalshi_router.py  polymarket_archive.py  resolutions.py  router.py
api/src/pfm/auth/: __init__.py  dependencies.py  models.py  production.py  rate_limiter.py  router.py  storage.py
api/src/pfm/crypto5min/: __init__.py  background.py  comparator.py  confidence.py  market_fetcher.py  predictor.py  router.py  state.py  strike_scraper.py
api/src/pfm/data/: entity_factor_map.json
api/src/pfm/pricing/: __init__.py  binary_models.py  empirical_calibration.py  router.py
api/src/pfm/quant/: __init__.py  block_bootstrap.py  bootstrap_sharpe.py  cointegration_router.py  deflated_sharpe.py  granger_router.py  half_life.py  realized_vol.py  regression_methods.py  regression_methods_elnet_router.py  regression_methods_router.py  walk_forward.py
api/src/pfm/realtime/: __init__.py  hub.py  pollers.py  stream.py
api/src/pfm/research/: __init__.py  citations_router.py  router.py
api/src/pfm/schemas/: __init__.py  common.py  factors.py  regression.py  scanner.py  strategies.py  terminal.py
api/src/pfm/sources/: binance.py  bls.py  chain.py  equity.py  fred.py  health.py  health_router.py  kalshi.py  manifold.py  polygon.py  polymarket.py  polymarket_pool.py  predictit.py  sentiment_factor.py  stooq.py  tiingo.py  yfinance_batch.py
api/tests/: conftest.py  golden_helper.py  test_DEEP_advanced_models.py  test_DEEP_alerts_auth.py  test_DEEP_archive.py  test_DEEP_data_sources.py  test_DEEP_discoverability.py  test_DEEP_event_on_event.py  test_DEEP_killer_features.py  test_DEEP_latency_fixes.py  test_DEEP_multi_event_portfolio.py  test_DEEP_polish.py  test_DEEP_quant_core.py  test_DEEP_quant_rigor_advanced.py  test_DEEP_regression_robustness.py  test_DEEP_routing_fixes.py  test_DEEP_strategies_lab.py  test_DEEP_terminal_endpoints.py  test_admin_cache_invalidate.py  test_admin_cache_stats.py  test_advanced.py  test_advanced_event_models.py  test_advanced_model_coverage.py  test_advanced_strategies.py  test_aggregate_alpha_history.py  test_alerts.py  test_alerts_configure.py  test_alerts_digest.py  test_alerts_email.py  test_alerts_throttle.py  test_alpha_graveyard.py  test_alpha_hub_gather_timing.py  test_alpha_hub_leaderboard.py  test_alpha_hub_live_signal.py  test_alpha_hub_strategy_equity.py  test_alpha_hunter.py  test_alpha_lab.py  test_alphahub_leaderboard_snapshot.py  test_alphahub_strategy_snapshot.py  test_anti_alpha_router.py  (+294 more)
api/tests/fixtures/: alphahub_leaderboard_snapshot.json  alphahub_strategy_snapshot.json  arb_match_known_false_positives.json  binary_pricing_fixtures.json  openapi_snapshot.json
api/tests/golden/: alpha_graveyard.json  health_detail.json  multitest_bh_fixed.json  pm_vix_components_dummy.json  portfolio_resolution_tree.json  quarterly_stability_fixed.json  replay_scenarios.json  strategies_optimize_hrp.json
api/tests/sources/: test_sentiment_factor.py
api/tests/terminal/: test_event_impact_router.py  test_jumps.py  test_jumps_backtest.py  test_jumps_cluster.py  test_search_index.py  test_sentiment_leaderboard.py  test_sentiment_nlp.py
api/tests/visual/: __init__.py  test_regression_visual.py
cryptostuff/: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
cryptostuff/extraction/: __init__.py  binance_ws.py  orderbook.py  parsers.py
cryptostuff/models/: __init__.py  signals.py
cryptostuff/tests/: test_orderbook.py  test_parsers.py  test_signals.py  test_ws.py
docs/: CACHE.md  (+28 more)
(+408 files in other folders)
