[project]
name = "crypto-microstructure"
version = "0.1.0"
description = "Real-time crypto market microstructure: Binance WS extraction + quant signal models"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "pandas>=2.2",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extraction", "models"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["A", "N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
